fix: updated Swagger documentation to paginated methods to contain meta data
